# AlphaBayes

./: .Makefile.swp  .gitignore  .gitmodules  AlphaBayes.f90  AlphaBayes3.f90  AlphaBayesSpec.txt  BayesA.f90  CMakeLists.txt  Compile.sh  Global.f90  InitiateSeed.f90  Makefile  MarkerEffectPostProcessing.f90  NEWS  PearsnR4.f90  Prediction.f90  README  README.md  README.txt  ReadData.f90  ReadParam.f90  RidgeRegression.f90  RidgeRegressionMCMC.f90  gasdev.f90  make_zip_file.sh  momentR4.f90  ran1.f90  random_gamma.f90  random_order.f90
doc/: .gitignore  AlphaBayes.txt  makePdf.sh
doc/source/: conf.py  index.rst
example/: AlphaBayesSpec.txt  CovariatesTrain.csv  FixedEffectsTrain.csv  GenoTest1.csv  GenoTrain.csv  PhenoTest1.csv  PhenoTrain.csv  RandomEffectsTrain.csv
src/: AlphaBayes.f90  CMakeLists.txt  IntitialiseIntelRNG.f90
test/: AlphaBayesSpec.txt  Geno.csv  Pheno.csv  Seed.txt
util/: GenomePartitions.R
