SET(ALPHABAYES_src
            AlphaBayes.f90

)



if (ALPHABAYESEXE)      
    add_definitions(-D COMMIT=${VERSION})
    ADD_EXECUTABLE(${ALPHABAYESEXE} ${ALPHABAYES_src})
   TARGET_LINK_LIBRARIES(${ALPHABAYESEXE} ${MKL_CORE_LIB})
   TARGET_LINK_LIBRARIES(${ALPHABAYESEXE} ${AHLIB})
    TARGET_LINK_LIBRARIES(${ALPHABAYESEXE} ${MKL_THREAD_LIB})
    TARGET_LINK_LIBRARIES(${ALPHABAYESEXE} ${MKL_ILP_LIB})
  if (USE_MPI)
    TARGET_LINK_LIBRARIES(${ALPHABAYESEXE} ${MKL_SCALAPACK_LIB})
  endif() 
    TARGET_LINK_LIBRARIES(${ALPHABAYESEXE} ${MKL_LAPACK_LIB})
    TARGET_LINK_LIBRARIES(${ALPHABAYESEXE} ${MKL_BLAS_LIB})
endif()

#INSTALL(TARGETS ${ALPHABAYESEXE} RUNTIME DESTINATION bin)
